--- a/src/Room/Cash/BetBoard/BetBoard.module.scss
+++ b/src/Room/Cash/BetBoard/BetBoard.module.scss
@@ -1,7 +1,9 @@
+@import '../../../styles/variables';
+
 .container {
     position: relative;
-    background-color: bisque;
-    border: 1px solid darkgrey;
+    background-color: $buttonBoardBg;
+    border: 1px solid $buttonBoarder;
     border-radius: 4px;
     width: 200px;
     height: 80px;
@@ -11,7 +13,7 @@
 .disabler {
     width: 100%;
     height: 80px;
-    background-color: blanchedalmond;
+    background-color: $buttonBoardDisabler;
     opacity: 0.5;
     z-index: 100;
     transform: translateY(-20px);
