--- a/src/Room/Cash/BetBoard/BetButtons/BetButton/BetButton.module.scss
+++ b/src/Room/Cash/BetBoard/BetButtons/BetButton/BetButton.module.scss
@@ -1,13 +1,15 @@
+@import '../../../../../styles/variables';
+
 .button {
-    background-color: cornflowerblue;
-    border: 1px solid wheat;
+    background-color: $betButtonBg;
+    border: 1px solid $betButtonBorder;
     border-radius: 4px;
     width: 80px;
     height: 40px;
-    color: wheat;
+    color: $betButtonText;
     cursor: pointer;
 
     &:disabled {
-        background-color: grey;
+        background-color: $betButtonDisabled;
     }
 }
