--- a/src/Room/Cash/BetBoard/ChipsSelect/Chip/Chip.module.scss
+++ b/src/Room/Cash/BetBoard/ChipsSelect/Chip/Chip.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../../styles/variables';
+
 %baseChip {
     width: 60px;
     height: 30px;
@@ -6,7 +8,7 @@
     background-repeat: no-repeat;
     background-position: center;
     padding-right: 10px;
-    border: 1px dashed orange;
+    border: 1px dashed $chipBorder;
     cursor: pointer;
 }
 
@@ -17,5 +19,5 @@
 .chipSelected {
     @extend %baseChip;
     transform: translateY(-6px);
-    border: 1px dashed brown;
+    border: 1px dashed $chipSelected;
 }
